--- a/src/App.css
+++ b/src/App.css
@@ -27,17 +27,9 @@
   /* admin-card */
   .card {
    position: relative;
-   width: 190px;
-   height: 254px;
-   background-color: #000;
-   display: flex;
-   flex-direction: column;
-   justify-content: end;
-   padding: 12px;
-   gap: 12px;
    border-radius: 8px;
    cursor: pointer;
-   color: white;
+   
  }
  
  .card::before {
@@ -46,8 +38,8 @@
    inset: 0;
    left: -5px;
    margin: auto;
-   width: 200px;
-   height: 264px;
+   width: 160px;
+   padding:24px 24px;
    border-radius: 10px;
    background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100% );
    z-index: -10;
@@ -87,5 +79,12 @@
  .card:hover::before {
    transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
  }
- 
- 
+ .card-btn-glass{
+  /* From https://css.glass */
+background: rgba(255, 255, 255, 0.63);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(1.5px);
+-webkit-backdrop-filter: blur(1.5px);
+border: 1px solid rgba(255, 255, 255, 0.3);
+ }
