manage scholarship ui

--- a/src/App.css
+++ b/src/App.css
@@ -343,3 +343,14 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: #e6e6e6;
 }
+/* manageScholar-edit */
+.editScholar{
+  /* From https://css.glass */
+background: rgba(83, 92, 104, 0.17);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(3.1px);
+-webkit-backdrop-filter: blur(3.1px);
+border: 1px solid rgba(83, 92, 104, 0.3);
+}
+/* edit-modal cancel-button */
