--- a/src/App.css
+++ b/src/App.css
@@ -372,3 +372,80 @@ backdrop-filter: blur(5px);
 -webkit-backdrop-filter: blur(5px);
 border: 1px solid rgba(236, 240, 241, 0.3);
 }
+/* home */
+.topScholarBox{
+  -webkit-box-shadow: 0 0 1px 3px #000 inset;
+-moz-box-shadow: 0 0 1px 3px #000 inset;
+box-shadow: 0 0 20px 0px #c0c0c0 inset;
+}
+/* topScholarShip-btn */
+.btn-17 {
+  position: relative;
+  width: 120px;
+  height: 40px;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  color: white;
+  flex-direction: column;
+  justify-content: center;
+  border: none;
+  padding: 12px;
+  gap: 12px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.btn-17::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  left: -4px;
+  top: -1px;
+  margin: auto;
+  width: 128px;
+  height: 48px;
+  border-radius: 10px;
+  background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100% );
+  z-index: -10;
+  pointer-events: none;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.btn-17::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
+  transform: translate3d(0, 0, 0) scale(0.95);
+  filter: blur(20px);
+}
+
+.btn-17:hover::after {
+  filter: blur(30px);
+}
+
+.btn-17:hover::before {
+  transform: rotate(-180deg);
+}
+
+.btn-17:active::before {
+  scale: 0.7;
+}
+.topScholarScrollbar::-webkit-scrollbar{
+  width: 5px;
+}
+.topScholarScrollbar::-webkit-scrollbar-thumb{
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.topScholarScrollbar::-webkit-scrollbar-thumb{
+  background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%);
+}
+.topScholarScrollbar::-webkit-scrollbar-thumb:hover{
+  background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+}
