--- a/src/App.css
+++ b/src/App.css
@@ -548,3 +548,8 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     opacity: 1;
   }
 }
+/* review-text-animation */
+.tracking-in-expand {
+	-webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: tracking-in-expand 0.7s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
