--- a/src/App.css
+++ b/src/App.css
@@ -553,3 +553,6 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 	-webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 	        animation: tracking-in-expand 0.7s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
+.appliedTxt{
+  text-shadow: -1px 8px 2px rgba(154,123,123,0.63);
+}
