--- a/src/App.css
+++ b/src/App.css
@@ -435,6 +435,7 @@ box-shadow: 0 0 20px 0px #c0c0c0 inset;
 }
 .topScholarScrollbar::-webkit-scrollbar{
   width: 5px;
+  height:8px;
 }
 .topScholarScrollbar::-webkit-scrollbar-thumb{
   border-radius: 5px;
@@ -448,6 +449,7 @@ box-shadow: 0 0 20px 0px #c0c0c0 inset;
 }
 .topScholarScrollbar::-webkit-scrollbar-thumb:hover{
   background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+  cursor: pointer;
 }
 /* review modal */
 .reviewModal{
