--- a/src/App.css
+++ b/src/App.css
@@ -558,3 +558,25 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 .appliedTxt{
   text-shadow: -1px 8px 2px rgba(154,123,123,0.63);
 }
+/* errorTxt */
+.errorTxt h2:nth-child(1){
+  color:transparent;
+  -webkit-text-stroke: 1px #e96d82;
+}
+.errorTxt h2:nth-child(2){
+  color:#b71540;
+  animation:animate 4s ease-in-out infinite;
+  -webkit-animation:animate 4s ease-in-out infinite;
+}
+@keyframes animate {
+  0%,100%{
+    clip-path: polygon(1% 45%, 15% 38%, 29% 34%, 43% 37%, 56% 44%, 68% 52%, 80% 54%, 89% 49%, 100% 38%, 100% 100%, 0% 100%);
+  }
+  50%{
+    clip-path: polygon(0 35%, 10% 40%, 20% 46%, 30% 52%, 46% 47%, 60% 38%, 74% 41%, 86% 47%, 100% 55%, 100% 100%, 0% 100%);
+  }
+}
+/* errorBg */
+.errorBg{
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1247%26quot%3b)' fill='none'%3e%3cpath d='M805.339%2c486.182C839.851%2c487.516%2c877.953%2c485.406%2c897.475%2c456.914C919.118%2c425.327%2c918.674%2c382.488%2c898.822%2c349.746C879.621%2c318.078%2c842.369%2c304.396%2c805.339%2c304.957C769.387%2c305.502%2c734.075%2c321.062%2c716.636%2c352.506C699.642%2c383.146%2c705.389%2c421.046%2c724.761%2c450.24C742.19%2c476.505%2c773.841%2c484.965%2c805.339%2c486.182' fill='rgba(15%2c 142%2c 177%2c 0.32)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M807.7585091129524 182.98582750413257L760.1497469201205 285.0831475035545 862.2470669195424 332.69190969638646 909.8558291123743 230.59458969696453z' fill='rgba(15%2c 142%2c 177%2c 0.32)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M260.6763586678244 123.86980195417543L343.66893595239725 238.09928486196804 374.90584157561705 40.87722466960257z' fill='rgba(15%2c 142%2c 177%2c 0.32)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M1392.2410322238534 265.3739993254701L1348.5663889245677 195.47995961007194 1265.5626510011134 295.9389444166994z' fill='rgba(15%2c 142%2c 177%2c 0.32)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M105.542%2c453.686C161.068%2c455.346%2c208.517%2c418.213%2c236.874%2c370.445C265.916%2c321.522%2c276.252%2c261.731%2c249.207%2c211.676C220.918%2c159.32%2c165.048%2c126.703%2c105.542%2c127.376C47.127%2c128.037%2c-6.369%2c162.666%2c-32.601%2c214.864C-56.573%2c262.564%2c-39.591%2c316.77%2c-12.861%2c362.981C13.82%2c409.107%2c52.279%2c452.094%2c105.542%2c453.686' fill='rgba(15%2c 142%2c 177%2c 0.32)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M954.0253649023143 371.1112323696786L858.0887760502249 298.81782728713995 785.7953709676863 394.7544161392294 881.7319598197757 467.04782122176806z' fill='rgba(15%2c 142%2c 177%2c 0.32)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M343.5462259545286 342.33976992606335L473.7639113584465 360.6406721257434 361.84712815420863 212.12208452214549z' fill='rgba(15%2c 142%2c 177%2c 0.32)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M1308.144%2c337.697C1330.41%2c337.552%2c1352.278%2c328.903%2c1363.943%2c309.937C1376.157%2c290.079%2c1376.865%2c264.965%2c1365.347%2c244.695C1353.695%2c224.188%2c1331.73%2c211.776%2c1308.144%2c211.736C1284.488%2c211.696%2c1262.425%2c224.009%2c1250.604%2c244.5C1238.79%2c264.979%2c1238.65%2c290.556%2c1251.07%2c310.673C1262.922%2c329.87%2c1285.583%2c337.844%2c1308.144%2c337.697' fill='rgba(15%2c 142%2c 177%2c 0.32)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M1097.7714662273308 213.96744813470468L1074.796619444951 299.7107436226564 1214.8989860680686 291.3013660522502z' fill='rgba(15%2c 142%2c 177%2c 0.32)' class='triangle-float1'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1247'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3cstyle%3e %40keyframes float1 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-10px%2c 0)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float1 %7b animation: float1 5s infinite%3b %7d %40keyframes float2 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-5px%2c -5px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float2 %7b animation: float2 4s infinite%3b %7d %40keyframes float3 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(0%2c -10px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float3 %7b animation: float3 6s infinite%3b %7d %3c/style%3e%3c/defs%3e%3c/svg%3e");
+}
