manage applied app feedback opt

--- a/src/App.css
+++ b/src/App.css
@@ -703,3 +703,17 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     opacity: 1;
   }
 }
+.appliedFeedbackBg{
+background: rgba(149, 165, 166, 0.34);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(8.3px);
+-webkit-backdrop-filter: blur(8.3px);
+}
+.appliedFeedbackText{
+background: rgba(252, 255, 255, 0.34);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(8.3px);
+-webkit-backdrop-filter: blur(8.3px);
+}
